CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- The scheduler now rejects jobs with copies outside the
	  range of 1 to 100, inclusive.
	- The scheduler didn't block signals while it processed
	  others and when it forked processes.
	- Updated the CUPS startup script to better support
	  different timezones and to support the RedHat/Mandrake
	  init script functions, if available.
	- The scheduler did not properly handle backslashes in
	  banner files; it incorrectly assumed that "\c" should
	  always be replaced by "c", instead of only looking for
	  "\{" and replacing it by "{".
	- The texttops filter didn't handle prettyprint=no.
	- The text and HP-GL/2 filters didn't check for other
	  common duplex option names like cupsMarkOptions() did.
	- "lpoptions -x printer" no longer clears the "default
	  printer" status of the printer.
	- cupsTempFd() now stops trying to create a temporary
	  file after 1000 tries, and aborts on any error other
	  than EEXIST.  This should prevent lp/lpr hangs due to
	  a bad or missing temporary directory.
	- The lpadmin command did not send the right URI to the
	  scheduler when setting options on classes.  This
	  caused a client-error-bad-request error.
	- The CUPS API convenience functions would attempt to
	  connect to the remote server name in a
	  "printer@server" printer name instead of dealing with
	  the default (usually local) server.  Aside from
	  causing user confusion, the remote server name might
	  not be resolved properly, causing further problems.
	- "lp -q" would cause the "lp" command to segfault, as
	  the program would try to print the option letter that
	  caused the error using the wrong index into the
	  command-line; bugfix from Debian.
	- Fixed a minor inconsistancy in the encoding of boolean
	  attributes from printer options in
	  cupsEncodeOptions().
	- Added a FilterNice directive which sets the priority
	  of job filter processes that are run by the scheduler.